<resources>
    <string name="app_name"> Shopping</string>
    <string name="homepage_title">首页</string>
    <string name="search_title">搜索</string>
    <string name="bottom_nav_homepage">首页</string>
    <string name="bottom_nav_weather">天气</string>
    <string name="bottom_nav_cart">购物车</string>
    <string name="bottom_nav_profile">我的</string>
    <string name="weather_title">天气情况</string>
    <string name="login_title">会员登录</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_register">没有账号? 免费注册</string>
    <string name="button_submit">确认</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="message">我的信息</string>
    <string name="order">我的订单</string>
    <string name="history">我的足迹</string>
    <string name="username_default">未登录</string>
    <string name="detail_title">商品详情</string>
    <string name="buy">立即购买</string>
    <string name="like">添加至购物车</string>
    <string name="register_title">会员注册</string>
    <string name="username">用户名</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="hint_mobile">手机</string>
    <string name="hint_address">地址</string>
    <string name="hint_age">年龄</string>
    <string name="user_info_title">个人详情</string>
    <string name="edit">修改</string>
    <string name="update">修改信息</string>
    <string name="order_list_title">订单列表</string>
    <string name="delete">删除</string>
    <string name="cart_title">购物车</string>
</resources>
